Add "addressable_courses" flag - MEDT-3393
* Set up django-debug-toolbar for debugging purposes
* Added new "addressable_courses" waffle flag
* Added two new course-aware views: course detail page, and course asset
manager.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -172,7 +172,11 @@
                 <div id="course_information">
                     <h1 id="course_title">
                     {% block coursetitle %}
+                        {% flag "addressable_courses" %}
+                        <a href="{% url 'course_detail' course.pk %}" id="course_title_link">{{course.title}}</a>
+                        {% else %}
                         <a href="/" id="course_title_link">{{course.title}}</a>
+                        {% endflag %}
                     {% endblock %}
                     </h1>
                     <div class="clear: right;"></div>
