Panopto Ingest Log for periodic task
Stash results of the periodic ingest into a database logging model. Display the results in a simple paginated ListView.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4765,3 +4765,17 @@ ul.section-tabs>li>a.active {
     font-weight: normal;
     margin-top: 8px;
 }
+
+.badge-danger {
+  background-color: #b94a48;
+}
+.badge-warning {
+  background-color: #f89406;
+}
+.badge-success {
+  background-color: #468847;
+}
+
+.page-count {
+    margin-top: 5px;
+}
