--- a/mediathread/templates/courseaffils/course_row.html
+++ b/mediathread/templates/courseaffils/course_row.html
@@ -30,6 +30,7 @@
     </td>
     <td>
         {% for user in course.faculty_group.user_set.all %}
+        {% firstof user.get_full_name user.username %},
             {% with exceptions='swav,swinstructor' %}
                 {% if not user.is_staff and not user.username in exceptions %}
                     {% firstof user.get_full_name user.username %},
