--- a/mediathread/templates/dashboard/class_panopto_ingest_log.html
+++ b/mediathread/templates/dashboard/class_panopto_ingest_log.html
@@ -23,10 +23,10 @@
                         {% else %}{% if object.level == 30 %}
                             <span class="badge badge-warning">Warning</span>
                         {% else %}{% if object.level == 40 %}
-                            <span class="badge badge-danger">Danger</span>
+                            <span class="badge badge-danger">Error</span>
                         {% endif %}{% endif %}{% endif %}
                     </td>
-                    <td>{{object.message}}</td>
+                    <td>{{object.message|safe}}</td>
                 </tr>
             {% endfor %}
             </tbody>
