--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -21,7 +21,10 @@ A new base.html without the course context overwritten in the template.
         <script src="/jsi18n"></script>
 
         {% if not debug %}
-            <script src="https://browser.sentry-cdn.com/5.6.1/bundle.min.js" integrity="sha384-pGTFmbQfua2KiaV2+ZLlfowPdd5VMT2xU4zCBcuJr7TVQozMO+I1FmPuVHY3u8KB" crossorigin="anonymous"></script>
+            <script
+                src="https://browser.sentry-cdn.com/5.7.0/bundle.min.js"
+                integrity="sha384-pHnCJ3bbzJ+LzI19wAdyBvGAjJ5vNAC59uxeRpw5WpgkSlZUQstEADxkSbBnI95q"
+                crossorigin="anonymous"></script>
             <script>
             Sentry.init({
                 dsn: 'https://a22770cb4ac744bbaf2b1ec76281e7ed@sentry.io/102468',
