--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -286,6 +286,12 @@
             {% elif project %}
             this.current_project = {{ project.pk }};
             {% endif %}
+
+            {% flag "addressable_courses" %}
+            this.addressable_courses = true;
+            {% else %}
+            this.addressable_courses = false;
+            {% endflag %}
         })();
     </script>
 
