Update hardcoded URLs to mediathread.ctl

--- a/mediathread/templates/assetmgr/asset_embed_list.html
+++ b/mediathread/templates/assetmgr/asset_embed_list.html
@@ -48,7 +48,7 @@
         <div id="header">
             <div id="standardnav_container">
                 <div id="mediathread_logo">
-                    <a href="https://mediathread.ccnmtl.columbia.edu/" target="_blank">
+                    <a href="https://mediathread.ctl.columbia.edu/" target="_blank">
                         <img src='{% static "img/logo_mediathread_new.png" %}' alt="mediathread logo" width="156" height="45" />
                         <span class="sr-only">Home</span>
                     </a>
