--- a/mediathread/templates/projects/msword.html
+++ b/mediathread/templates/projects/msword.html
@@ -33,7 +33,7 @@ div.Section2 {
     <h3>Experimental Feature</h3>
     <div>Please note that this MS-Word export feature is in the very early stages of development.
     If you experience problems or would like to comment, please use the
-    <a href="http://mediathread.ccnmtl.columbia.edu/contact/">Contact</a> form to
+    <a href="https://mediathread.ctl.columbia.edu/contact/">Contact</a> form to
     communicate with the Mediathread team.</div>
 </div>
 <hr/>
