Use CTL instead of CCNMTL in a few places

--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -28,7 +28,7 @@ A new base.html without the course context overwritten in the template.
             <script>
             Sentry.init({
                 dsn: 'https://a22770cb4ac744bbaf2b1ec76281e7ed@sentry.io/102468',
-                whitelistUrls: [/mediathread\.stage\.ccnmtl\.columbia\.edu/]
+                whitelistUrls: [/mediathread\.stage\.ctl\.columbia\.edu/]
             });
             {% if user.is_anonymous %}
             Sentry.setUser({
