--- a/mediathread/templates/dashboard/class_migrate.html
+++ b/mediathread/templates/dashboard/class_migrate.html
@@ -250,7 +250,7 @@
             <div class="course-information-container">
                 {% if user.is_staff %}
                     <div class="on-behalf-of-container well">
-                        <div class="helptext right" style="margin-top: -4px;">CCNMTL staff only</div>
+                        <div class="helptext right" style="margin-top: -4px;">CTL staff only</div>
                         <h4>Migrate As</h4>
                         <select id="on_behalf_of" class="form-control">
                             {% for faculty in current_course_faculty %}
