--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -25,7 +25,7 @@
         <script>
         Sentry.init({
             dsn: 'https://a22770cb4ac744bbaf2b1ec76281e7ed@sentry.io/102468',
-            whitelistUrls: [/mediathread\.stage\.ccnmtl\.columbia\.edu/]
+            whitelistUrls: [/mediathread\.stage\.ctl\.columbia\.edu/]
         });
         {% if user.is_anonymous %}
         Sentry.setUser({
