--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -2,20 +2,23 @@
 A new base.html without the course context overwritten in the template.
 {% endcomment %}
 
-{% load user_projects coursetags compress static bootstrap3 waffle_tags %}
+{% load user_projects coursetags compress static waffle_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
-    <head><!-- {{controller_name}} :: {{template_name}} -->
+    <head>
         <meta charset="utf-8">
         <title>Mediathread {% block title %}{% endblock %}</title>
 
         <script src='{% static "jquery/js/jquery-2.2.4.min.js" %}'></script>
-        {% bootstrap_javascript %}
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
         <script src='{% static "jquery/js/jquery-ui.min.js" %}'></script>
         <script src='{% static "jquery/js/jquery.mousewheel.min.js" %}'></script>
         <script src="{% static 'js/mustache/mustache.min.js' %}"></script>
-        <script src="{{STATIC_URL}}js/flowplayer/flowplayer.min.js"></script>
+        <script src="{% static 'js/flowplayer/flowplayer.min.js' %}"></script>
 
         <script src="{% static 'js/lib/sherdjs/lib/OpenLayers-min.js' %}"></script>
         <script src="/jsi18n"></script>
@@ -46,13 +49,13 @@ A new base.html without the course context overwritten in the template.
 
         <script src='{% static 'js/app/extension_updater.js' %}'></script>
 
-        {% bootstrap_css %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
         <link rel="stylesheet" href="{% static 'jquery/css/jquery-ui.css' %}" media="screen" />
         <link rel="shortcut icon" href="{% static 'img/mediathread_favicon.ico' %}" type="image/x-icon"/>
 
         {% compress css %}
-        <link rel="stylesheet" href='{% static "css/print.css" %}' media="print" />
-        <link rel="stylesheet" href='{% static "css/mediathread.css" %}' media="screen" />
+        <link rel="stylesheet" href='{% static "css/mediathread_new.css" %}' media="screen" />
         {% block css %}{% endblock %}
         {% endcompress %}
 
@@ -69,14 +72,13 @@ A new base.html without the course context overwritten in the template.
     {% course_role for request.user in course as role_in_course %}
     <body class="role-{{role_in_course}} {% block extra_body_class %}{% endblock %}">
         <div id="dialog-confirm" style="display: none"></div>
-        {% block container %}
-            <div id="container">
+
                 {% block masthead %}
                     <!-- ###### Site banner ###### -->
                     <div id="header">
                         <div id="standardnav_container">
                             <div id="mediathread_logo">
-                                <a href="/">
+                                <a href="/" title="Home">
                                     <img src='{% static "img/logo_mediathread_new.png" %}' alt="mediathread logo" width="156" height="45" />
                                     <span class="sr-only">Home</span>
                                 </a>
@@ -91,31 +93,31 @@ A new base.html without the course context overwritten in the template.
                                         {% endif %}
                                         {% if user.is_impersonate %}
                                             <li>
-                                                <a class="warning" href="/impersonate/stop/">Impersonate Stop</a>
+                                                <a class="warning" href="/impersonate/stop/" title="Impersonate Stop">Impersonate Stop</a>
                                             </li>
                                         {% endif %}
 
                                         {% if role_in_course == 'instructor' %}
                                             <li>
-                                                <a href="{% url 'course-settings-general' %}">
+                                                <a href="{% url 'course-settings-general' %}" title="Course Settings">
                                                     Course Settings
                                                 </a>
                                             </li>
                                             <li>
                                                 <div class="settings_menu reports closed">
-                                                    <div class="right ui-icon-reverse ui-icon-triangle-1-s"></div>
-                                                    <div class="left settings_menu_title">Reports</div>
+                                                    <div class="float-right ui-icon-reverse ui-icon-triangle-1-s"></div>
+                                                    <div class="float-left settings_menu_title">Reports</div>
                                                 </div>
                                                 <div class="visualclear"></div>
                                                 <!-- Settings Menu -->
                                                 <div class="settings_submenu" style="display: none">
-                                                    <a href="/reports/class_assignments/">Assignment Responses</a>
-                                                    <a href="/reports/class_activity/">Class Activity</a>
-                                                    <a href="/reports/class_summary/">Class Member Contributions</a>
+                                                    <a href="/reports/class_assignments/" title="Assignment Responses">Assignment Responses</a>
+                                                    <a href="/reports/class_activity/" title="Class Activity">Class Activity</a>
+                                                    <a href="/reports/class_summary/" title="Class Member Contributions">Class Member Contributions</a>
                                                     {% if user.is_staff %}
                                                         <hr />
-                                                        <a href="/reports/activity/course/">Activity by Course</a>
-                                                        <a href="/reports/self-registration/">Self-Registration Report</a>
+                                                        <a href="/reports/activity/course/" title="Activity by Course">Activity by Course</a>
+                                                        <a href="/reports/self-registration/" title="Self-Registration Report">Self-Registration Report</a>
                                                     {% endif %}
                                                 </div>
                                             </li>
@@ -123,51 +125,51 @@ A new base.html without the course context overwritten in the template.
                                         <li>
                                             {% block standardnav_help %}
                                                 <div class="settings_menu help closed">
-                                                    <div class="right ui-icon-reverse ui-icon-triangle-1-s"></div>
-                                                    <div class="left settings_menu_title">Help</div>
+                                                    <div class="float-right ui-icon-reverse ui-icon-triangle-1-s"></div>
+                                                    <div class="float-left settings_menu_title">Help</div>
                                                 </div>
                                                 <div class="visualclear"></div>
                                                 <!-- Settings Menu -->
                                                 <div class="settings_submenu" style="display: none">
-                                                    <a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread">Knowledge Base</a>
-                                                    <a href="/contact/">Contact Us</a>
+                                                    <a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread" title="Knowledge Base">Knowledge Base</a>
+                                                    <a href="/contact/" title="Contact Us">Contact Us</a>
                                                 </div>
                                             {% endblock %}
                                         </li>
                                         <li class="divider-vertical"></li>
                                         <li>
                                             <div class="settings_menu user closed">
-                                                <div class="right ui-icon-reverse ui-icon-triangle-1-s"></div>
-                                                <div class="left settings_menu_title">{% public_name for user %}</div>
+                                                <div class="float-right ui-icon-reverse ui-icon-triangle-1-s"></div>
+                                                <div class="float-left settings_menu_title">{% public_name for user %}</div>
                                             </div>
                                             <div class="visualclear"></div>
                                             <!-- Settings Menu -->
                                             <div class="settings_submenu" style="display: none">
                                                 {% if user.is_staff %}
-                                                    <a href="/admin/">Admin</a>
+                                                    <a href="/admin/" title="Admin">Admin</a>
                                                 {% endif %}
                                                 {% if user.is_superuser %}
-                                                    <a href="/impersonate/search/">Impersonate</a>
+                                                    <a href="/impersonate/search/" title="Impersonate">Impersonate</a>
                                                 {% endif %}
 
                                                 {% num_courses for user as user_courses %}
                                                 {% if role_in_course == 'instructor' or user_courses > 1 or user.is_staff %}
-                                                    <a href="/?unset_course">My Courses</a>
+                                                    <a href="/?unset_course" title="My Courses">My Courses</a>
                                                 {% endif %}
 
                                                 {% if user.has_usable_password %}
-                                                    <a href="/accounts/password_change/">Change Password</a>
+                                                    <a href="/accounts/password_change/" title="Change Password">Change Password</a>
                                                 {% endif %}
 
-                                                <a href="/accounts/logout/?next=/">Log Out</a>
+                                                <a href="/accounts/logout/?next=/" title="Log Out">Log Out</a>
                                             </div>
                                         </li>
                                     {% else %}
-                                        <li><div unselectable="on"><a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread">Help</a></div></li>
+                                        <li><div unselectable="on"><a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread" title="Help">Help</a></div></li>
                                         {% if request.user.is_authenticated %}
-                                            <li><a href="/accounts/logout/?next=/">Log Out</a></li>
+                                            <li><a href="/accounts/logout/?next=/" title="Log Out">Log Out</a></li>
                                         {% else %}
-                                            <li><a href="/accounts/login/">Log In</a></li>
+                                            <li><a href="/accounts/login/" title="Log In">Log In</a></li>
                                         {% endif %}
                                     {% endif %}
                                 </ul>
@@ -179,9 +181,13 @@ A new base.html without the course context overwritten in the template.
                                     <h1 id="course_title">
                                         {% block coursetitle %}
                                             {% flag "addressable_courses" %}
-                                            <a href="{% url 'course_detail' course.pk %}" id="course_title_link">{{course.title}}</a>
+                                            <a href="{% url 'course_detail' course.pk %}"
+                                               title="{{course.title}}"
+                                               id="course_title_link">{{course.title}}</a>
                                             {% else %}
-                                            <a href="/" id="course_title_link">{{course.title}}</a>
+                                            <a href="/"
+                                               title="{{course.title}}"
+                                               id="course_title_link">{{course.title}}</a>
                                             {% endflag %}
                                         {% endblock %}
                                     </h1>
@@ -194,20 +200,28 @@ A new base.html without the course context overwritten in the template.
 
                 {% endblock %}
 
+        {% block container %}
+            <div class="container">
+
+
                 <!-- ###### Don't touch this ###### -->
                 <div class="visualclear"></div>
 
                 <!-- ###### Page: Sidebars and Content ###### -->
                 <div id="pagebody">
-                    <div id="shieldbox"></div>
-
 
                     <!-- ###### Page Content ###### -->
                     <div>
                         {% block pagetitle %}{% endblock %}
 
                         {% block messages %}
-                            {% bootstrap_messages %}
+                            {% if messages %}
+                                <ul class="messages">
+                                    {% for message in messages %}
+                                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
                         {% endblock %}
 
                         {% block content %}{% endblock %}
@@ -218,7 +232,7 @@ A new base.html without the course context overwritten in the template.
                     </div>
                 </div><!-- id="pagebody" -->
         {% endblock %}
-            </div><!-- id="container" -->
+        </div><!-- class="container" -->
 
             {% block footer %}
                 <!-- ###### Footer ###### -->
@@ -232,9 +246,9 @@ A new base.html without the course context overwritten in the template.
                     </a>
 
                     <ol id="footernav">
-                        <li><a href="https://mediathread.info" target="_blank">About</a></li>
-                        <li><a href="/contact/">Contact Us</a></li>
-                        <li><a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread">Help</a></li>
+                        <li><a href="https://mediathread.info" title="About" target="_blank">About</a></li>
+                        <li><a href="/contact/" title="Contact Us">Contact Us</a></li>
+                        <li><a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread" title="Help">Help</a></li>
                     </ol>
                 </div><!-- id="footer" -->
             {% endblock %}
@@ -303,10 +317,8 @@ A new base.html without the course context overwritten in the template.
             <script src='{% static "js/app/util.js" %}'></script>
             <script src='{% static "js/app/ajaxDelete.js" %}'></script>
             <script src='{% static "js/app/analytics.js" %}'></script>
-            <script src='{% static "js/app/browserdetect.js" %}'></script>
             <script src='{% static "js/app/mediathread_setup.js" %}'></script>
             <script src='{% static "js/app/panel.js" %}'></script>
-            <script src='{% static "js/app/shield.js" %}'></script>
 
             <!--  Asset related -->
             <script src='{% static "js/app/assetmgr/asset.js" %}'></script>
@@ -330,9 +342,6 @@ A new base.html without the course context overwritten in the template.
                 jQuery("html").ajaxStop(function() {
                     jQuery(this).removeClass("busy");
                 });
-
-                /* Select from list: Chrome, Firefox, Safari, MSIE */
-                shieldbrowser({"Chrome": 1, "Firefox": 3.6, "Safari": 4, "MSIE": 10 });
 
                 jQuery("div.settings_menu").click(function(evt) {
                     evt.stopPropagation();
@@ -386,7 +395,7 @@ A new base.html without the course context overwritten in the template.
 
     {% if STAGING_ENV %}
         <div class="alert alert-error" style="position: fixed; bottom: 0px; background-color: #fee; border: #f00 solid 1px; width: 100%;">
-            <h4>&nbsp;Warning: You are viewing a staging version of this site, not the production site.&nbsp;&nbsp;&nbsp;Last Updated: <b>{{STAGING_DEPLOY_TIME}}</b></h4>
+            <h4>&nbsp;Warning: You are viewing a staging version of this site, not the production site.&nbsp;&nbsp;&nbsp;Last Updated: <strong>{{STAGING_DEPLOY_TIME}}</strong></h4>
         </div>
     {% endif %}
 
