Update mediathread.info link to use https
Also, some whitespace cleanup.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -229,7 +229,7 @@
             </a>
 
            <ol id="footernav">
-               <li><a href="http://mediathread.info" target="_blank">About</a></li>
+               <li><a href="https://mediathread.info" target="_blank">About</a></li>
                <li><a href="/contact/">Contact Us</a></li>
                <li><a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread">Help</a></li>
             </ol>
