--- a/mediathread/templates/courseaffils/course_detail.html
+++ b/mediathread/templates/courseaffils/course_detail.html
@@ -68,7 +68,7 @@
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <strong>Welcome to Mediathread!</strong> The Guest Sandbox is a place to experiment with all the application features.
             <p>Be aware that work here is temporary. All user-created compositions and selections are removed every Monday morning.</p>
-            <p>To learn more about Mediathread and how to install an instance at your institution, visit <a href="//mediathread.info">http://mediathread.info</a></p>
+            <p>To learn more about Mediathread and how to install an instance at your institution, visit <a href="https://mediathread.info">https://mediathread.info</a></p>
         </div>
     {% endif %}
 
