--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -232,7 +232,7 @@ A new base.html without the course context overwritten in the template.
                     </a>
 
                     <ol id="footernav">
-                        <li><a href="http://mediathread.info" target="_blank">About</a></li>
+                        <li><a href="https://mediathread.info" target="_blank">About</a></li>
                         <li><a href="/contact/">Contact Us</a></li>
                         <li><a href="http://support.ctl.columbia.edu/knowledgebase/topics/6593-mediathread">Help</a></li>
                     </ol>
