--- a/mediathread/templates/lti_auth/fail_course_configuration.html
+++ b/mediathread/templates/lti_auth/fail_course_configuration.html
@@ -60,7 +60,7 @@
                     <input type="hidden" name="sis_course_id" value="{{sis_course_id}}">
                     <input type="hidden" name="domain" value="{{domain}}">
                     <p>
-                        <a href="http://mediathread.info" target="about:blank" class="btn btn-default btn-lg" style="margin-right: 5px;">Learn More</a>
+                        <a href="https://mediathread.info" target="about:blank" class="btn btn-default btn-lg" style="margin-right: 5px;">Learn More</a>
                         <button type="submit" class="btn btn-primary btn-lg">Connect Now</button>
                     </p>
                 </form>
