--- a/mediathread/templates/registration/description.html
+++ b/mediathread/templates/registration/description.html
@@ -1,6 +1,6 @@
 <div class="login-description">
     <h1>Mediathread is an open-source platform for exploration, analysis, and organization of web-based multimedia content.</h1>
-    <p>Mediathread connects to a variety of image and video collections (such as YouTube, Flickr, library databases, and course libraries), enabling users to lift items out of these collections and into an analysis environment. In Mediathread, items can then be clipped, annotated, organized, and embedded into essays and other written analysis. <a href="http://mediathread.info" target="_blank"><b>Learn More</b></a></p>
+    <p>Mediathread connects to a variety of image and video collections (such as YouTube, Flickr, library databases, and course libraries), enabling users to lift items out of these collections and into an analysis environment. In Mediathread, items can then be clipped, annotated, organized, and embedded into essays and other written analysis. <a href="https://mediathread.info" target="_blank"><b>Learn More</b></a></p>
     <br />
 
     <div class="row">
