Remove unused !important

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4224,7 +4224,7 @@ div.ui-dialog div.asset-view-details h2 {
 }
 
 a.btn.btn-default {
-    color: #333; !important;
+    color: #333;
     font-weight: normal;
 }
 
