--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -55,7 +55,7 @@ A new base.html without the course context overwritten in the template.
         <link rel="shortcut icon" href="{% static 'img/mediathread_favicon.ico' %}" type="image/x-icon"/>
 
         {% compress css %}
-        <link rel="stylesheet" href='{% static "css/mediathread_new.css" %}' media="screen" />
+        <link rel="stylesheet" href='{% static "css/mediathread.css" %}' media="screen" />
         {% block css %}{% endblock %}
         {% endcompress %}
 
