Fix a few new base_new CSS problems
Also, update to bootstrap 4.4.0.

--- a/mediathread/templates/assetmgr/install_chrome_extension.html
+++ b/mediathread/templates/assetmgr/install_chrome_extension.html
@@ -9,11 +9,11 @@
     </p>
     {% if CAS_BASE == 'https://cas.columbia.edu' %}
         <button id="chrome-install-button"
-                class="btn btn-primary pull-left">
+                class="btn btn-sm btn-primary pull-left">
             + Add to Chrome
         </button>
     {% else %}
-        <a class="btn btn-primary pull-left"
+        <a class="btn btn-sm btn-primary pull-left"
            target="_blank"
            href="https://chrome.google.com/webstore/detail/mediathread/gambcgmmppeklfmbahomokogelnaffbi">
             + Add to Chrome
@@ -30,7 +30,7 @@
              title="Compatible with Chromium">
     </div>
     <div class="clearfix"></div><br />
-    <button class="btn btn-primary update-chrome-extension-hosturl">
+    <button class="btn btn-sm btn-primary update-chrome-extension-hosturl">
         Update extension settings
     </button>
     <div class="update-chrome-extension-feedback"></div>
