--- a/mediathread/templates/courseaffils/course_detail.html
+++ b/mediathread/templates/courseaffils/course_detail.html
@@ -182,8 +182,8 @@
                                 <a href="#"
                                    class="arrow arrowClosed">
 
-                                    <h3 class="left">Import into Collection</h3>
-                                    <div class="arrowIcon left"></div>
+                                    <div class="float-left">Import into Collection</div>
+                                    <div class="arrowIcon float-left"></div>
                                 </a>
                                 <div class="arrowContent" id="import_collection" style="display: none">
                                     {% if request.user_agent.browser.family == 'Chrome' or request.user_agent.browser.family == 'Chromium' %}
