--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -10,10 +10,10 @@ A new base.html without the course context overwritten in the template.
         <meta charset="utf-8">
         <title>Mediathread {% block title %}{% endblock %}</title>
 
-        <script src='{% static "jquery/js/jquery-2.2.4.min.js" %}'></script>
+        <script src='{% static "jquery/js/jquery-3.4.1.min.js" %}'></script>
 
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
         <script src='{% static "jquery/js/jquery-ui.min.js" %}'></script>
         <script src='{% static "jquery/js/jquery.mousewheel.min.js" %}'></script>
@@ -49,7 +49,7 @@ A new base.html without the course context overwritten in the template.
 
         <script src='{% static 'js/app/extension_updater.js' %}'></script>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
         <link rel="stylesheet" href="{% static 'jquery/css/jquery-ui.css' %}" media="screen" />
         <link rel="shortcut icon" href="{% static 'img/mediathread_favicon.ico' %}" type="image/x-icon"/>
@@ -191,7 +191,7 @@ A new base.html without the course context overwritten in the template.
                                             {% endflag %}
                                         {% endblock %}
                                     </h1>
-                                    <div class="clear: right;"></div>
+                                    <div style="clear: right;"></div>
                                 </div>
                             {% endif %}
                         {% endblock %}
