Add search filters react-select DOM

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4170,3 +4170,16 @@ ul.section-tabs>li>a.active {
 .ol-map {
     height: 200px;
 }
+
+.react-select {
+    flex: 1 1 0%;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-radius: .25rem;
+}
