Add "skip to main content" button to base_new.html
https://webaim.org/techniques/skipnav/

https://webaim.org/techniques/css/invisiblecontent/#skipnavlinks

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4195,3 +4195,18 @@ ul.section-tabs>li>a.active {
     bottom: 8px;
     left: 8px;
 }
+
+#skip a {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+#skip a:focus {
+    position: static;
+    width: auto;
+    height: auto;
+}
