--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -10,6 +10,8 @@ A new base.html without the course context overwritten in the template.
         <meta charset="utf-8">
         <title>Mediathread {% block title %}{% endblock %}</title>
 
+        <meta id="csrf-token" name="csrf-token" content="{{csrf_token}}">
+
         <script src='{% static "jquery/js/jquery-3.4.1.min.js" %}'></script>
 
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
