Add SVG Mediathread logo

--- a/mediathread/templates/500.html
+++ b/mediathread/templates/500.html
@@ -11,7 +11,7 @@
             <div id="standardnav_container">
                 <div id="mediathread_logo">
                     <a href="/">
-                        <img src="{{STATIC_URL}}img/logo_mediathread_new.png" alt="mediathread logo" width="156" height="45" />
+                        <img src="{{STATIC_URL}}img/logo_mediathread.svg" alt="mediathread logo" width="156" height="45" />
                     </a>
                 </div>
             </div>
