--- a/mediathread/templates/lti_auth/fail_course_configuration.html
+++ b/mediathread/templates/lti_auth/fail_course_configuration.html
@@ -29,7 +29,7 @@
         <div id="standardnav_container">
             <div id="mediathread_logo">
                 <a href="/">
-                    <img src='{% static "img/logo_mediathread_new.png" %}' alt="mediathread logo" width="156" height="45" />
+                    <img src='{% static "img/logo_mediathread.svg" %}' alt="mediathread logo" width="156" height="45" />
                     <span class="sr-only">Home</span>
                 </a>
             </div>
