--- a/mediathread/templates/navbar.html
+++ b/mediathread/templates/navbar.html
@@ -2,7 +2,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000;">
     <a title="Mediathread" class="navbar-brand" href="#">
-        <img src='{% static "img/logo_mediathread_new.png" %}' alt="Mediathread logo" />
+        <img src='{% static "img/logo_mediathread.svg" %}'
+             width="156" height="45"
+             alt="Mediathread logo" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
