--- a/mediathread/templates/assetmgr/asset_embed_list.html
+++ b/mediathread/templates/assetmgr/asset_embed_list.html
@@ -49,7 +49,7 @@
             <div id="standardnav_container">
                 <div id="mediathread_logo">
                     <a href="https://mediathread.ctl.columbia.edu/" target="_blank">
-                        <img src='{% static "img/logo_mediathread_new.png" %}' alt="mediathread logo" width="156" height="45" />
+                        <img src='{% static "img/logo_mediathread.svg" %}' alt="mediathread logo" width="156" height="45" />
                         <span class="sr-only">Home</span>
                     </a>
                 </div>
