--- a/mediathread/templates/dashboard/class_activity.html
+++ b/mediathread/templates/dashboard/class_activity.html
@@ -1,12 +1,10 @@
-{% extends "dashboard/base_dashboard.html" %}
+{% extends 'dashboard/base_course_dashboard.html' %}
 {% load comments %}
 
-{% block dashboard_module_header %}
-    <h2>Report: Class Activity</h2>
-{% endblock %}
+{% block dashboard_content %}
+    <h2>Report: Course Activity</h2>
 
-{% block dashboard_module %}
-    <p>Listed below are the latest posting activities by all members of your Mediathread class.</p>
+    <p>Listed below are the latest posting activities by all members of your Mediathread course.</p>
 
       <ul class="clumper">
         {%for clump in my_feed%}
