--- a/mediathread/templates/dashboard/class_summary.html
+++ b/mediathread/templates/dashboard/class_summary.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base_dashboard.html" %}
+{% extends 'dashboard/base_course_dashboard.html' %}
 {% load comments coursetags %}
 
 {% block uncompressable_js %}
@@ -106,12 +106,10 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/protovis/protovis.min.js"></script>
 {% endblock %}
 
-{% block dashboard_module_header %}
-    <h2>Report: Class Member Contributions</h2>
-{% endblock %}
+{% block dashboard_content %}
+    <h2>Report: Course Member Contributions</h2>
 
-{% block dashboard_module %}
-<p>This report lists the number of each class member's saved selections, discussion thread posts, and compositions. To access an individual person's work, click on her name. </p>
+<p>This report lists the number of each course member's saved selections, discussion thread posts, and compositions. To access an individual person's work, click on her name. </p>
 <table id="summary_columns">
 <tr>
 
@@ -146,7 +144,7 @@
  <div>
   <div class="panel-column">
     <h2>Experimental Graph Visualization</h2>
-    <p> This graph tries to visualize the different inter-connected objects in the class.
+    <p> This graph tries to visualize the different inter-connected objects in the course.
             It's incredibly experimental--we'd like to link the dots to the objects, and filter, and many other things.  Suggestions are welcome.
           </p>
 
