--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -3957,6 +3957,15 @@ div.ui-dialog div.asset-view-details h2 {
 }
 
 /* Fix bootstrap styles */
+
+/* Pull right-aligned user link back into left-aligned mobile
+   vertical navigation menu */
+@media only screen and (max-width: 991px) {
+    .navbar-nav li.ml-auto.nav-item {
+        margin-left: 0 !important;
+    }
+}
+
 a.btn.btn-default {
     color: #333;
     font-weight: normal;
