--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -1,3 +1,25 @@
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
+/* accessible blue */
+a {
+    color: #0056b3;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1.page-title {
+    padding: .5em 0em .5em 0em;
+}
+
+h6.course-title {
+    text-transform: uppercase;
+    padding: 1em 0em 1em 0em;
+}
+
 /* Disable the above glyphicon color override for the Sequence application */
 #jux-container button span.glyphicon {
     color: inherit;
@@ -297,6 +319,24 @@ html.busy, html.busy * {
 /* ########## Blocks style definitions ########## */
 
 /* ---- Standard navigation block elements ---------- */
+
+nav#three-section-tabs a.active {
+    /* bottom border fix */
+    margin-bottom: -1px;
+}
+
+/* query formats responsive tabs for mobile viewport */
+@media only screen and (max-width: 575px) {
+    nav#three-section-tabs {
+        border: 0;
+    }
+    nav#three-section-tabs .nav-link {
+        border-radius: .25rem;
+    }
+    nav#three-section-tabs .active {
+        border: 1px solid #dee2e6;
+    }
+}
 
 #standardnav_container {
     display: block;
