--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -16,6 +16,7 @@ A new base.html without the course context overwritten in the template.
 
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
 
         <script src='{% static "jquery/js/jquery-ui.min.js" %}'></script>
         <script src='{% static "jquery/js/jquery.mousewheel.min.js" %}'></script>
@@ -80,28 +81,23 @@ A new base.html without the course context overwritten in the template.
 
         <div id="dialog-confirm" style="display: none"></div>
 
-                {% block masthead %}
-                    {% include "navbar.html" %}
-
-                    {% block courseinformation %}
-                        {% if not read_only_view %}
-                            <div id="course_information">
-                                <h1 id="course_title">
-                                    {% block coursetitle %}
-                                        <a href="{% url 'course_detail' course.pk %}"
-                                           title="{{course.title}}"
-                                           id="course_title_link">{{course.title}}</a>
-                                    {% endblock %}
-                                </h1>
-                                <div style="clear: right;"></div>
-                            </div>
-                        {% endif %}
-                    {% endblock %}
-                {% endblock %}
+        {% block masthead %}
+            {% include "navbar.html" %}
+        {% endblock %}
 
         {% block container %}
-            <div class="container">
-
+            <div class="container-fluid">
+                {% block courseinformation %}
+                    {% if not read_only_view %}
+                        <h6 class="course-title">
+                            {% block coursetitle %}
+                                <a href="{% url 'course_detail' course.pk %}"
+                                   title="{{course.title}}"
+                                   id="course_title_link">{{course.title}}</a>
+                            {% endblock %}
+                        </h6>
+                    {% endif %}
+                {% endblock %}
 
                 <!-- ###### Don't touch this ###### -->
                 <div class="visualclear"></div>
