Make sign out button white

--- a/mediathread/templates/navbar.html
+++ b/mediathread/templates/navbar.html
@@ -72,7 +72,7 @@
 
             <li class="nav-item">
                 {% if request.user.is_authenticated %}
-                    <a class="btn btn-outline-primary" role="button"
+                    <a class="btn btn-outline-light btn-block" role="button"
                        href="/accounts/logout/?next=/" title="Sign Out">
                         Sign Out
                     </a>
