Add Marc's new loading alerts

--- a/mediathread/templates/courseaffils/course_detail_react.html
+++ b/mediathread/templates/courseaffils/course_detail_react.html
@@ -13,6 +13,8 @@
     {{ block.super }}
 
     <div id="react-container">
-        Loading...
+        <div class="alert alert-dark" role="alert">
+            <strong>Hang on.</strong> Mediathread is currently loading.
+        </div>
     </div>
 {% endblock %}
