Add the getCourseId() mustache helper

--- a/media/templates/discussion.mustache
+++ b/media/templates/discussion.mustache
@@ -94,7 +94,7 @@
                         <div class="collection-materials" style="display:{{#context.editing}}block{{/context.editing}}{{^context.editing}}none{{/context.editing}}">
                             <h2>
                                 <div class="collection_button">
-                                    <a href="/asset/">View Full Collection</a>
+                                    <a href="/course/{{getCourseId}}/asset/">View Full Collection</a>
                                 </div>
                                 Collection
                             </h2>
