--- a/media/templates/project.mustache
+++ b/media/templates/project.mustache
@@ -254,7 +254,7 @@
                             <h2>
                                 <div class="button-form inline">
                                     <div class="collection_button">
-                                        <a href="/asset/">View Full Collection</a>
+                                        <a href="/course/{{getCourseId}}/asset/">View Full Collection</a>
                                     </div>
                                 </div>
                                 Collection
