Update card bg color to #ccc

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4281,7 +4281,7 @@ ul.section-tabs>li>a.active {
 }
 
 .card-thumbnail {
-    background-color: #999;
+    background-color: #ccc;
     position: relative;
 }
 
