--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4301,3 +4301,27 @@ ul.section-tabs>li>a.active {
     top: .8em;
     z-index: 1;
 }
+
+#view-pagination {
+    margin-bottom: 1em;
+}
+
+.assets .col-sm-4 {
+    padding: 0;
+}
+
+/*
+ * Fix up card borders to look right in the card group.
+ * This is necessary because I'm adding in the .col-sm-4,
+ * which isn't meant to be used with .card-group.
+ */
+@media (min-width: 576px) {
+    .card-group>.col-sm-4+.col-sm-4>.card {
+        margin-left: 0;
+        border-left: 0;
+    }
+
+    .card-group>.col-sm-4>.card {
+        border-radius: 0;
+    }
+}
