Course Dashboard: add course-aware routes
This is connected to the course cleanup effort.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -92,9 +92,9 @@
                                 </li>
                             {% endif %}
 
-                            {% if role_in_course == 'instructor' %}
+                            {% if role_in_course == 'instructor' and course %}
                             <li>
-                                <a href="{% url 'course-settings-general' %}">
+                                <a href="{% url 'course-settings-general' course.pk %}">
                                     Course Settings
                                 </a>
                             </li>
