--- a/mediathread/templates/dashboard/base_course_dashboard.html
+++ b/mediathread/templates/dashboard/base_course_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_new.html' %}
 
 {% block title %}&mdash; Course Settings {% endblock %}
 
@@ -14,36 +14,37 @@
                     <li>
                         <a
                             {% if '/settings/' in request.path %}class="active"{% endif %}
-                            href="{% url 'course-settings-general' %}"
-                        >General</a>
+                            href="{% url 'course-settings-general' request.course.pk %}">
+                            General
+                        </a>
                     </li>
                     <li>
                         <a
                             {% if '/sources/' in request.path %}class="active"{% endif %}
                             {% if '/ingest/' in request.path %}class="active"{% endif %}
-                            href="/dashboard/sources/">Sources</a>
+                            href="{% url 'class-manage-sources' request.course.pk %}">Sources</a>
                     </li>
                     {% if user.is_staff %}
                     <li>
                         <a
                             {% if '/panopto/' in request.path %}class="active"{% endif %}
-                            href="/dashboard/panopto/">Panopto Sources</a>
+                            href="{% url 'course-panopto-source' request.course.pk %}">Panopto Sources</a>
                     </li>
                     {% endif %}
                     <li>
                         <a
                             {% if '/migrate/' in request.path %}class="active"{% endif %}
-                            href="/dashboard/migrate/">Migrations</a>
+                            href="{% url 'dashboard-migrate' request.course.pk %}">Migrations</a>
                     </li>
                     <li>
                         <a
                             {% if '/taxonomy/' in request.path %}class="active"{% endif %}
-                            href="/taxonomy/">Vocabulary</a>
+                            href="{% url 'taxonomy-workspace' request.course.pk %}">Vocabulary</a>
                     </li>
                     <li>
                         <a
                             {% if '/roster/' in request.path %}class="active"{% endif %}
-                            href="/dashboard/roster/">Roster</a>
+                            href="{% url 'course-roster' request.course.pk %}">Roster</a>
                     </li>
                     <li>
                         <a
@@ -64,11 +65,11 @@
                     {% if user.is_superuser %}
                         <li>
                             <a {% if '/delete/' in request.path %}class="active"{% endif %}
-                                href="/dashboard/delete/materials/">Delete Materials</a>
+                                href="{% url 'course-delete-materials' request.course.pk %}">Delete Materials</a>
                         </li>
                         <li>
                             <a {% if '/convert/' in request.path %}class="active"{% endif %}
-                                href="/dashboard/convert/materials/">Convert Materials</a>
+                                href="{% url 'course-convert-materials' request.course.pk %}">Convert Materials</a>
                         </li>
                     {% endif %}
                 </ul>
