Fix all the tests In some cases, tests are redirecting to the old home page

--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -90,7 +90,7 @@ A new base.html without the course context overwritten in the template.
             <div class="container-fluid">
                 {% block courseinformation %}
                     {% if not read_only_view %}
-                        <h6 class="course-title">
+                        <h6 id="course-title" class="course-title">
                             {% block coursetitle %}
                                 {{course.title}}
                             {% endblock %}
